# cp705

./: .gitignore  CMakeLists.txt  README.md  index.html  manifest.json  partitions.csv  sdkconfig  sdkconfig.defaults
YouTube_Video_Scripts/: 20260107.txt  README.txt  RxTxLog.txt  gen_overlay_ass.py  gen_youtube_timestamps.py  overlay.ass
components/board_cardputer_adv/: board_power.cpp
components/ft8_lib/common/: monitor.c
components/storage_service/: storage_service.cpp
components/storage_service/include/: storage_service.h
components/ui/: ui.cpp
docs/: manifest.json
host_mock/: esp_timer.h  host_main.cpp  test_reactivation_deadlock.json  test_report_reincarnation.json  test_rogers_reincarnation.json
main/: CMakeLists.txt  audio_source.cpp  audio_source.h  autoseq.cpp  autoseq.h  core_api.h  core_api_internal.h  dds_q15.cpp  dds_q15.h  feature_flags.h  ft8_audio_pipeline.cpp  gps.cpp  ic705_netctrl.cpp  ic705_netctrl.h  idf_component.yml  main.cpp  protocol.h  radio_control.cpp  radio_control.h  radio_control_backend.h  radio_control_ic705.cpp  station_types.h  stream_wifi_ic705.cpp  stream_wifi_ic705.h  wifi_manager.cpp  wifi_manager.h
